--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header {
 
 nav {
   margin-top: 10px;
+  text-align: center;
 }
 
 nav button {
@@ -54,11 +55,34 @@ th, td {
   font-weight: normal;
 }
 
-input[type="text"], input[type="number"] {
+input[type="text"],
+input[type="number"],
+input[type="file"] {
   width: 100%;
   box-sizing: border-box;
+  font-family: 'Aptos Narrow', sans-serif;
+  font-size: 10pt;
 }
 
 button {
   font-family: 'Aptos Narrow', sans-serif;
+  font-size: 10pt;
+  padding: 4px 8px;
+  margin: 2px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ddd;
+}
+
+td button {
+  background-color: #27ae60;
+  color: white;
+}
+
+td button:hover {
+  background-color: #1e8449;
 }
